feat: GetExhibitionByUserID
