# cmd/exhibition/doc/swagger.json
@@ -12,11 +12,6 @@
     "paths": {
         "/api/exhibitions": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "Get a list of all exhibitions data is public only",
                 "produces": [
                     "application/json"
@@ -126,11 +121,6 @@
         },
         "/api/exhibitions/{id}": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "Get exhibition data by exhibitionID",
                 "produces": [
                     "application/json"
@@ -264,7 +254,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Like"
+                    "Like \u0026 Unlike"
                 ],
                 "summary": "Like exhibition by ID",
                 "operationId": "LikeExhibition",
@@ -340,7 +330,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Unlike"
+                    "Like \u0026 Unlike"
                 ],
                 "summary": "Unlike exhibition by ID",
                 "operationId": "UnlikeExhibition",
@@ -567,6 +557,47 @@
                         "description": "Delete Section Success",
                         "schema": {
                             "$ref": "#/definitions/model.ResponseGetExhibitionId"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/helper.APIError"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/{userId}/exhibitions": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get exhibition data by exhibitionUserID",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Exhibitions"
+                ],
+                "summary": "Get exhibition by UserID",
+                "operationId": "GetExhibitionByUserID",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "userId",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.ResponseExhibition"
                         }
                     },
                     "500": {
