# handler/exhibihandler/get-exhibition.go
@@ -3,6 +3,7 @@ package exhibihandler
 import (
 	"log"
 	"net/http"
+	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
@@ -31,7 +32,6 @@ func (h *Handler) GetAllExhibitions(c *gin.Context) {
 //	@Summary		Get exhibition by ID
 //	@Description	Get exhibition data by exhibitionID
 //	@Tags			Exhibitions
-//	@Security		BearerAuth
 //	@ID				GetExhibitionByID
 //	@Produce		json
 //	@Param			id	path		string	true	"Exhibition ID"
@@ -66,7 +66,6 @@ func (h *Handler) GetExhibitionByID(c *gin.Context) {
 //	@Summary		Get all exhibitions is public
 //	@Description	Get a list of all exhibitions data is public only
 //	@Tags			Exhibitions
-//	@Security		BearerAuth
 //	@ID				GetExhibitionsIsPublic
 //	@Produce		json
 //	@Success		200	{object}	[]model.ResponseExhibition
@@ -81,5 +80,35 @@ func (h *Handler) GetExhibitionsIsPublic(c *gin.Context) {
 	}
 
 	// Return the exhibition details
+	c.JSON(http.StatusOK, exhibitions)
+}
+
+//	@Summary		Get exhibition by UserID
+//	@Description	Get exhibition data by exhibitionUserID
+//	@Tags			Exhibitions
+//	@Security		BearerAuth
+//	@ID				GetExhibitionByUserID
+//	@Produce		json
+//	@Param			userId	path		int	true	"User ID"
+//	@Success		200		{object}	model.ResponseExhibition
+//	@Failure		500		{object}	helper.APIError	"Internal server error"
+//	@Router			/api/{userId}/exhibitions [get]
+func (h *Handler) GetExhibitionByUserID(c *gin.Context) {
+	// Extract the userID from the request parameters
+	userID, err := strconv.Atoi(c.Param("userId"))
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid user ID"})
+		return
+	}
+
+	// Retrieve exhibitions by user ID from the service layer
+	exhibitions, err := h.ExhibitionService.GetExhibitionByUserID(c.Request.Context(), userID)
+	if err != nil {
+		log.Printf("Error retrieving exhibitions for user ID %d: %v", userID, err)
+		c.JSON(http.StatusInternalServerError, gin.H{"error": "Internal Server Error"})
+		return
+	}
+
+	// Return the exhibitions as JSON response
 	c.JSON(http.StatusOK, exhibitions)
 }
